[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/other/white_circle_64x64.png" type="Texture" id=1]
[ext_resource path="res://assets/emotion/kenney_emotespack/PNG/Vector/Style 6/emote_dots3.png" type="Texture" id=2]
[ext_resource path="res://assets/emotion/kenney_emotespack/PNG/Vector/Style 2/emote_exclamation.png" type="Texture" id=3]
[ext_resource path="res://assets/emotion/kenney_emotespack/PNG/Vector/Style 2/emote_question.png" type="Texture" id=4]
[ext_resource path="res://npc/npc.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/supermarket.ttf" type="DynamicFontData" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 18.0

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 44, 24 )

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[node name="npc_jacob" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.196078 )
scale = Vector2( 0.8125, 0.34375 )
texture = ExtResource( 1 )

[node name="graphics" type="Node2D" parent="."]

[node name="body" type="Polygon2D" parent="graphics"]
color = Color( 0.34902, 0.129412, 0.294118, 1 )
polygon = PoolVector2Array( -18, 0, -18, -20, -16, -32, -8, -38, 10, -38, 16, -34, 18, -26, 18, 0, 10, 4, 0, 6, -10, 4 )

[node name="Polygon2D" type="Polygon2D" parent="graphics"]
color = Color( 0.623529, 0.0627451, 0.615686, 1 )
polygon = PoolVector2Array( 10, -38, 8, 4, 0, 6, -10, -36, -8, -38 )

[node name="head" type="Polygon2D" parent="graphics"]
color = Color( 0.654902, 0.541176, 0.372549, 1 )
polygon = PoolVector2Array( 8, -38, 0, -36, -6, -38, -8, -52, 10, -52 )

[node name="Polygon2D2" type="Polygon2D" parent="graphics"]
polygon = PoolVector2Array( -12, -48, 6, -48, 10, -40, 12, -54, -8, -56 )

[node name="eye" type="Polygon2D" parent="graphics"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -4, -46, 0, -46, 0, -44, -4, -44 )

[node name="breath_position" type="Position2D" parent="graphics"]
position = Vector2( -14, -42 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="name" type="Label" parent="."]
material = SubResource( 2 )
margin_left = -26.0
margin_top = -94.0
margin_right = 26.0
margin_bottom = -80.0
custom_styles/normal = SubResource( 3 )
text = "Jacob"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
shape = SubResource( 4 )

[node name="emotions_dialog" type="Node2D" parent="."]
material = SubResource( 5 )
z_index = 20

[node name="hint_talk" type="Sprite" parent="emotions_dialog"]
visible = false
use_parent_material = true
position = Vector2( 72, -98 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
flip_h = true

[node name="Label" type="Label" parent="emotions_dialog/hint_talk"]
use_parent_material = true
margin_left = -16.0
margin_top = -37.3333
margin_right = 72.0
margin_bottom = -23.3333
custom_fonts/font = SubResource( 6 )
text = "กด F เพื่อสนทนา"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="success_quest" type="Sprite" parent="emotions_dialog"]
visible = false
use_parent_material = true
position = Vector2( 0, -140 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="current_quest" type="Sprite" parent="emotions_dialog"]
visible = false
use_parent_material = true
position = Vector2( 0, -140 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
